# cautious-enigma

./: .gitignore  Dockerfile  LICENSE  README.md  backtest_file_prepare.py  backtest_watch.py  commands.md  pyproject.toml
cautious-enigma/: core.py  main.py
conf/: default_config.yaml  notebook_config.yaml  train_config.yaml
data_train/: eurusd_h1.csv
enigma/: core.py
models/: class_model.joblib  rf_class_a.joblib
mt5/Experts/: potato.mq5
mt5/Include/: DataCollect.mqh  JAson.mqh
mt5/Scripts/: RatesExport.mq5  tomato.mq5
notebooks/: classification.ipynb
