[tool.poetry]
name = "cautious-enigma"
version = "0.1.0"
description = "Forex trading project"
authors = ["Shiqarno <shiqarno@proton.me>"]
license = "MIT License"
readme = "README.md"
keywords = ["forex", "data science", "machine learning", "trading"]

[tool.poetry.dependencies]
python = "~3.12"
pandas = "^2.3.3"
pandas-ta = "^0.4.71b0"
scikit-learn = "^1.8.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
